--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -17,7 +17,7 @@ title: Information System Designer | Fonctionnalités - Vue d'ensemble
 </section>
 
 <div class="card banner bg-dark text-white text-center">
-    <img src="images/banners/banner_features.jpg" class="card-img" alt="Fonctionnalités">
+    <img src="images/banners/banner_features.jpg" class="card-img" alt="Fonctionnalités" style="height: 550px;">
     <div class="container card-img-overlay">
         <section>
         {% include block_heading.html
