--- a/soa-designer.html
+++ b/soa-designer.html
@@ -135,7 +135,7 @@ title: Information System Designer | Fonctionnalités - Service Oriented Archite
                 %}
                 {% include block_cols.html
                     col="4"
-                    icon_name="far fa-download"
+                    icon_name="fas fa-download"
                     icon_color="txt_indigo"
                     title="Téléchargement" 
                     desc=""
