--- a/graal-designer.html
+++ b/graal-designer.html
@@ -113,7 +113,7 @@ title: Information System Designer | Fonctionnalités - Graal Designer
                 %}
                 {% include block_cols.html
                     col="4"
-                    icon_name="far fa-download"
+                    icon_name="fas fa-download"
                     icon_color="txt_indigo"
                     title="Téléchargement" 
                     desc=""
