--- a/cinematic-designer.html
+++ b/cinematic-designer.html
@@ -96,7 +96,7 @@ title: Information System Designer | Fonctionnalités - Cinematic Designer
                 %}
                 {% include block_cols.html
                     col="4"
-                    icon_name="far fa-download"
+                    icon_name="fas fa-download"
                     icon_color="txt_indigo"
                     title="Téléchargement" 
                     desc=""
