--- a/requirements-designer.html
+++ b/requirements-designer.html
@@ -67,9 +67,9 @@ title: Information System Designer | Fonctionnalités - Requirements Designer
                     icon_name="far fa-file-alt"
                     icon_color="txt_indigo"
                     title="Documentation" 
-                    desc=""
+                    desc="Apprenez à utiliser Requirements Designer, grâce à son guide d'utilisation en ligne"
                     href="https://github.com/ObeoNetwork/InformationSystem/wiki/Obeo-Network---Requirements-tooling"
-                    link_txt="Learn more"
+                    link_txt="En savoir plus"
                     href_icon="fas fa-arrow-alt-circle-right"
                 %}
                 {% include block_cols.html
@@ -77,9 +77,9 @@ title: Information System Designer | Fonctionnalités - Requirements Designer
                     icon_name="fas fa-download"
                     icon_color="txt_indigo"
                     title="Téléchargement" 
-                    desc=""
+                    desc="Découvrez Requirements Designer en téléchargeant la dernière release"
                     href="https://github.com/ObeoNetwork/InformationSystem/releases"
-                    link_txt="Learn more"
+                    link_txt="En savoir plus"
                     href_icon="fas fa-arrow-alt-circle-right"
                 %}
             </div>
