--- a/graal-designer.html
+++ b/graal-designer.html
@@ -106,9 +106,9 @@ title: Information System Designer | Fonctionnalités - Graal Designer
                     icon_name="far fa-file-alt"
                     icon_color="txt_indigo"
                     title="Documentation" 
-                    desc=""
+                    desc="Apprenez à utiliser Graal Designer, grâce à son guide d'utilisation en ligne"
                     href="https://github.com/ObeoNetwork/InformationSystem/wiki/Obeo-Network---Graal-tooling"
-                    link_txt="Learn more"
+                    link_txt="En savoir plus"
                     href_icon="fas fa-arrow-alt-circle-right"
                 %}
                 {% include block_cols.html
@@ -116,9 +116,9 @@ title: Information System Designer | Fonctionnalités - Graal Designer
                     icon_name="fas fa-download"
                     icon_color="txt_indigo"
                     title="Téléchargement" 
-                    desc=""
+                    desc="Découvrez Graal Designer en téléchargeant la dernière release"
                     href="https://github.com/ObeoNetwork/InformationSystem/releases"
-                    link_txt="Learn more"
+                    link_txt="En savoir plus"
                     href_icon="fas fa-arrow-alt-circle-right"
                 %}
             </div>
