--- a/index.html
+++ b/index.html
@@ -182,3 +182,17 @@ title: Information System Designer | Accueil
         </div>
     </div>       
 </section>
+
+<section class="bg_lightest_grey text-center">
+    <div class="container">
+        {% include block_heading.html
+            title="Aperçu"                
+            sub_title=""
+            desc="Découvrez les principales fonctionnalités en vidéo"
+        %}
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/HS2Dyt3zBlM" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+     </iframe>
+    </div>
+ </section>
