--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ title: Information System Designer | Accueil
             desc="Découvrez les principales fonctionnalités en vidéo"
         %}
 
-    <iframe width="1120" src="https://www.youtube.com/embed/HS2Dyt3zBlM" 
+    <iframe width="1120" height"630" src="https://www.youtube.com/embed/HS2Dyt3zBlM" 
         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
      </iframe>
     </div>
