--- a/solutions.html
+++ b/solutions.html
@@ -12,7 +12,7 @@ title: Information System Designer | Solutions
             %}
     </div>
 </section>
-<p>
+<p  class="text-center">
     <img src="images/illustrations/solutions.png">
 </p>
 <section class="bg_lightest_grey text-center">
@@ -29,7 +29,12 @@ title: Information System Designer | Solutions
                     icon_name="fas fa-users"
                     icon_color="txt_indigo"
                     title="Analyste métier" 
-                    desc="Capturer les besoins et dialoguer avec les concepteurs et développeurs"
+                    desc="Information System Designer assiste les analystes métiers dans le processus d’identification et de formalisation des besoins métiers :
+- Formaliser les exigences
+- Spécifier les cas d’utilisation
+- Identifier les entités métier
+- Maquetter les IHM.
+                Une description visuelle facilite les échanges aussi bien avec les utilisateurs qu’avec les équipes de conception et de développement."
                 %}
                 {% include block_cols.html
                     col="4"
