--- a/solutions.html
+++ b/solutions.html
@@ -30,10 +30,12 @@ title: Information System Designer | Solutions
                     icon_color="txt_indigo"
                     title="Analyste métier" 
                     desc="Information System Designer assiste les analystes métiers dans le processus d’identification et de formalisation des besoins métiers :
-- Formaliser les exigences
-- Spécifier les cas d’utilisation
-- Identifier les entités métier
-- Maquetter les IHM.
+<ul>
+    <li>Formaliser les exigences</li>
+    <li>Spécifier les cas d’utilisation</li>
+    <li>Identifier les entités métier</li>
+    <li>Maquetter les IHM.</li>
+</ul>
                 Une description visuelle facilite les échanges aussi bien avec les utilisateurs qu’avec les équipes de conception et de développement."
                 %}
                 {% include block_cols.html
