--- a/solutions.html
+++ b/solutions.html
@@ -30,11 +30,11 @@ title: Information System Designer | Solutions
                     icon_color="txt_indigo"
                     title="Analyste métier" 
                     desc="Information System Designer assiste les analystes métiers dans le processus d’identification et de formalisation des besoins métiers :
-<ul>
-    <li>Formaliser les exigences</li>
-    <li>Spécifier les cas d’utilisation</li>
-    <li>Identifier les entités métier</li>
-    <li>Maquetter les IHM.</li>
+<ul class="list-unstyled">
+    <li><i class="fa fa-check" aria-hidden="true"></i> Formaliser les exigences</li>
+    <li><i class="fa fa-check" aria-hidden="true"></i> Spécifier les cas d’utilisation</li>
+    <li><i class="fa fa-check" aria-hidden="true"></i> Identifier les entités métier</li>
+    <li><i class="fa fa-check" aria-hidden="true"></i> Maquetter les IHM.</li>
 </ul>
                 Une description visuelle facilite les échanges aussi bien avec les utilisateurs qu’avec les équipes de conception et de développement."
                 %}
