--- a/solutions.html
+++ b/solutions.html
@@ -29,12 +29,12 @@ title: Information System Designer | Solutions
                     icon_name="fas fa-users"
                     icon_color="txt_indigo"
                     title="Analyste métier" 
-                    desc="Information System Designer assiste les analystes métiers dans le processus d’identification et de formalisation des besoins métiers :
-<ul class="list-unstyled">
-    <li><i class="fa fa-check" aria-hidden="true"></i> Formaliser les exigences</li>
-    <li><i class="fa fa-check" aria-hidden="true"></i> Spécifier les cas d’utilisation</li>
-    <li><i class="fa fa-check" aria-hidden="true"></i> Identifier les entités métier</li>
-    <li><i class="fa fa-check" aria-hidden="true"></i> Maquetter les IHM.</li>
+                    desc="Les analystes métiers peuvent plus facilement identifier et formaliser les besoins métiers :
+<ul class='list-unstyled'>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Formaliser les exigences</li>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Spécifier les cas d’utilisation</li>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Identifier les entités métier</li>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Maquetter les IHM.</li>
 </ul>
                 Une description visuelle facilite les échanges aussi bien avec les utilisateurs qu’avec les équipes de conception et de développement."
                 %}
@@ -43,14 +43,27 @@ title: Information System Designer | Solutions
                     icon_name="fas fa-desktop"
                     icon_color="txt_indigo"
                     title="Concepteur Front-End" 
-                    desc="Concevoir les interfaces utilisateurs et les interactions avec le back-end"
+                    desc="Les concepteurs front-end disposent d'un outil pour construire les interfaces utilisateurs et définir les interactions avec le back-end :
+<ul class='list-unstyled'>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Identifier les états d'une application</li>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Spécifier l'enchaînement des écrans</li>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Concevoir la structure des IHM</li>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Définir les données manipulées par les écrans</li>
+</ul>
+                Une description visuelle facilite les échanges aussi bien avec les utilisateurs qu’avec les équipes de conception et de développement."
                 %}
                 {% include block_cols.html
                     col="4"
                     icon_name="fas fa-server"
                     icon_color="txt_indigo"
                     title="Concepteur Back-End" 
-                    desc="Définir les services applicatifs, les objets métiers et la base de données"
+                    desc="Définir les services applicatifs, les objets métiers et la base de données
+                <ul class='list-unstyled'>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Identifier les états d'une application</li>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Spécifier l'enchaînement des écrans</li>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Concevoir la structure des IHM</li>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Définir les données manipulées par les écrans</li>
+</ul>"
                 %}
             </div>
     </div>
