--- a/solutions.html
+++ b/solutions.html
@@ -57,12 +57,11 @@ title: Information System Designer | Solutions
                     icon_name="fas fa-server"
                     icon_color="txt_indigo"
                     title="Concepteur Back-End" 
-                    desc="Définir les services applicatifs, les objets métiers et la base de données
+                    desc="Les concepteurs back-end Définir les services applicatifs, les objets métiers et la base de données
                 <ul class='list-unstyled'>
-    <li><i class='fa fa-check' aria-hidden='true'></i> Identifier les états d'une application</li>
-    <li><i class='fa fa-check' aria-hidden='true'></i> Spécifier l'enchaînement des écrans</li>
-    <li><i class='fa fa-check' aria-hidden='true'></i> Concevoir la structure des IHM</li>
-    <li><i class='fa fa-check' aria-hidden='true'></i> Définir les données manipulées par les écrans</li>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Définir les services applicatifs</li>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Spécifier les objets métier</li>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Concevoir la base de données</li>
 </ul>"
                 %}
             </div>
