--- a/solutions.html
+++ b/solutions.html
@@ -57,8 +57,7 @@ title: Information System Designer | Solutions
                     icon_name="fas fa-server"
                     icon_color="txt_indigo"
                     title="Concepteur Back-End" 
-                    desc="Les concepteurs back-end Définir les services applicatifs, les objets métiers et la base de données
-                <ul class='list-unstyled'>
+                    desc="              <ul class='list-unstyled'>
     <li><i class='fa fa-check' aria-hidden='true'></i> Définir les services applicatifs</li>
     <li><i class='fa fa-check' aria-hidden='true'></i> Spécifier les objets métier</li>
     <li><i class='fa fa-check' aria-hidden='true'></i> Concevoir la base de données</li>
