--- a/solutions.html
+++ b/solutions.html
@@ -8,7 +8,8 @@ title: Information System Designer | Solutions
             {% include block_heading.html
                 title="Analyse et Conception d’applications"                
                 sub_title="Identifier les besoins des utilisateurs et concevoir la solution"
-                desc="Dans le processus de développement d’une application, Information System Designer s’adresse principalement aux analystes métier et aux concepteurs applicatifs (front-end et back-end).  Elle leur permet de spécifier ensemble l’application à développer et de mieux la partager avec les architectes applicatifs, les développeurs et les Ops en charge du déploiement."
+                desc="Dans le processus de développement d’une application, Information System Designer s’adresse principalement aux analystes métier et aux concepteurs applicatifs (front-end et back-end).  
+        Elle leur permet de spécifier ensemble l’application à développer. Et grâce à une approche visuelle, ils peuvent mieux la partager avec les architectes applicatifs, les développeurs et les Ops en charge du déploiement."
             %}
     </div>
 </section>
@@ -29,22 +30,19 @@ title: Information System Designer | Solutions
                     icon_name="fas fa-users"
                     icon_color="txt_indigo"
                     title="Analyste métier" 
-                    desc="Les analystes métiers peuvent plus facilement identifier et formaliser les besoins métiers :
-<ul class='list-unstyled'>
-    <li><i class='fa fa-check' aria-hidden='true'></i> Formaliser les exigences</li>
+                    desc="<ul class='list-unstyled'>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Formaliser les exigences et les besoins métiers</li>
     <li><i class='fa fa-check' aria-hidden='true'></i> Spécifier les cas d’utilisation</li>
     <li><i class='fa fa-check' aria-hidden='true'></i> Identifier les entités métier</li>
     <li><i class='fa fa-check' aria-hidden='true'></i> Maquetter les IHM.</li>
-</ul>
-                Une description visuelle facilite les échanges aussi bien avec les utilisateurs qu’avec les équipes de conception et de développement."
+</ul>"
                 %}
                 {% include block_cols.html
                     col="4"
                     icon_name="fas fa-desktop"
                     icon_color="txt_indigo"
                     title="Concepteur Front-End" 
-                    desc="Les concepteurs front-end disposent d'un outil pour construire les interfaces utilisateurs et définir les interactions avec le back-end :
-<ul class='list-unstyled'>
+                    desc="<ul class='list-unstyled'>
     <li><i class='fa fa-check' aria-hidden='true'></i> Identifier les états d'une application</li>
     <li><i class='fa fa-check' aria-hidden='true'></i> Spécifier l'enchaînement des écrans</li>
     <li><i class='fa fa-check' aria-hidden='true'></i> Concevoir la structure des IHM</li>
