--- a/solutions.html
+++ b/solutions.html
@@ -8,19 +8,19 @@ title: Information System Designer | Solutions
             {% include block_heading.html
                 title="Analyse et Conception d’applications"                
                 sub_title="Identifier les besoins des utilisateurs et concevoir la solution"
-                desc="Dans le processus de développement d’une application, Information System Designer s’adresse principalement aux analystes métier et aux concepteurs applicatifs (front-end et back-end).  
-        Elle leur permet de spécifier ensemble l’application à développer. Et grâce à une approche visuelle, ils peuvent mieux la partager avec les architectes applicatifs, les développeurs et les Ops en charge du déploiement."
+                desc=""
             %}
     </div>
 </section>
 <p  class="text-center">
     <img src="images/illustrations/solutions.png">
 </p>
+<br>
 <section class="bg_lightest_grey text-center">
     <div class="container">
             {% include block_heading.html
-                title="Atelier unique"                
-                sub_title=""
+                title="Un atelier partagé"                
+                sub_title="Dans le processus de développement d’une application, Information System Designer s’adresse principalement aux analystes métier et aux concepteurs applicatifs (front-end et back-end). Elle leur permet de spécifier ensemble l’application à développer"
                 desc=""
             %}
 
@@ -47,14 +47,61 @@ title: Information System Designer | Solutions
     <li><i class='fa fa-check' aria-hidden='true'></i> Spécifier l'enchaînement des écrans</li>
     <li><i class='fa fa-check' aria-hidden='true'></i> Concevoir la structure des IHM</li>
     <li><i class='fa fa-check' aria-hidden='true'></i> Définir les données manipulées par les écrans</li>
-</ul>
-                Une description visuelle facilite les échanges aussi bien avec les utilisateurs qu’avec les équipes de conception et de développement."
+</ul>"
                 %}
                 {% include block_cols.html
                     col="4"
                     icon_name="fas fa-server"
                     icon_color="txt_indigo"
                     title="Concepteur Back-End" 
+                    desc="              <ul class='list-unstyled'>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Définir les services applicatifs</li>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Spécifier les objets métier</li>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Concevoir la base de données</li>
+</ul>"
+                %}
+            </div>
+    </div>
+</section>
+
+<section class="text-center">
+    <div class="container">
+            {% include block_heading.html
+                title="Autres activités IT"                
+                sub_title="L'approche visuelle de Information System Designer facilite la collaboration avec les autres activités impliquées dans le développement et la maintenance d'applications."
+                desc=""
+            %}
+
+            <div class="row">
+                {% include block_cols.html
+                    col="4"
+                    icon_name="fas fa-cubes"
+                    icon_color="txt_indigo"
+                    title="Architecte applicatif" 
+                    desc="<ul class='list-unstyled'>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Formaliser les exigences et les besoins métiers</li>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Spécifier les cas d’utilisation</li>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Identifier les entités métier</li>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Maquetter les IHM.</li>
+</ul>"
+                %}
+                {% include block_cols.html
+                    col="4"
+                    icon_name="fas fa-code"
+                    icon_color="txt_indigo"
+                    title="Développeur" 
+                    desc="<ul class='list-unstyled'>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Identifier les états d'une application</li>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Spécifier l'enchaînement des écrans</li>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Concevoir la structure des IHM</li>
+    <li><i class='fa fa-check' aria-hidden='true'></i> Définir les données manipulées par les écrans</li>
+</ul>"
+                %}
+                {% include block_cols.html
+                    col="4"
+                    icon_name="fas fa-sitemap"
+                    icon_color="txt_indigo"
+                    title="Ops" 
                     desc="              <ul class='list-unstyled'>
     <li><i class='fa fa-check' aria-hidden='true'></i> Définir les services applicatifs</li>
     <li><i class='fa fa-check' aria-hidden='true'></i> Spécifier les objets métier</li>
