--- a/solutions.html
+++ b/solutions.html
@@ -20,7 +20,7 @@ title: Information System Designer | Solutions
     <div class="container">
             {% include block_heading.html
                 title="Un atelier partagé"                
-                sub_title="Dans le processus de développement d’une application, Information System Designer s’adresse principalement aux analystes métier et aux concepteurs applicatifs (front-end et back-end). Elle leur permet de spécifier ensemble l’application à développer"
+                sub_title="Dans le processus de développement d’une application, Information System Designer s’adresse principalement aux analystes métier et aux concepteurs applicatifs (front-end et back-end). Elle leur permet de spécifier ensemble l’application à développer."
                 desc=""
             %}
 
@@ -102,7 +102,7 @@ title: Information System Designer | Solutions
                     icon_name="fas fa-sitemap"
                     icon_color="txt_indigo"
                     title="Ops" 
-                    desc="              <ul class='list-unstyled'>
+                    desc="<ul class='list-unstyled'>
     <li><i class='fa fa-check' aria-hidden='true'></i> Définir les services applicatifs</li>
     <li><i class='fa fa-check' aria-hidden='true'></i> Spécifier les objets métier</li>
     <li><i class='fa fa-check' aria-hidden='true'></i> Concevoir la base de données</li>
