--- a/solutions.html
+++ b/solutions.html
@@ -7,8 +7,8 @@ title: Information System Designer | Solutions
     <div class="container">
             {% include block_heading.html
                 title="Analyse et Conception d’applications"                
-                sub_title="Identifier les besoins des utilisateurs et concevoir la solution"
-                desc=""
+                sub_title=""
+                desc="Identifier les besoins des utilisateurs et concevoir la solution"
             %}
     </div>
 </section>
@@ -20,8 +20,8 @@ title: Information System Designer | Solutions
     <div class="container">
             {% include block_heading.html
                 title="Un atelier partagé"                
-                sub_title="Dans le processus de développement d’une application, Information System Designer s’adresse principalement aux analystes métier et aux concepteurs applicatifs (front-end et back-end). Elle leur permet de spécifier ensemble l’application à développer."
-                desc=""
+                sub_title=""
+                desc="Dans le processus de développement d’une application, Information System Designer s’adresse principalement aux analystes métier et aux concepteurs applicatifs (front-end et back-end). Elle leur permet de spécifier ensemble l’application à développer."
             %}
 
             <div class="row">
@@ -68,8 +68,8 @@ title: Information System Designer | Solutions
     <div class="container">
             {% include block_heading.html
                 title="Autres activités IT"                
-                sub_title="L'approche visuelle de Information System Designer facilite la collaboration avec les autres activités impliquées dans le développement et la maintenance d'applications."
-                desc=""
+                sub_title=""
+                desc="L'approche visuelle de Information System Designer facilite la collaboration avec les autres activités impliquées dans le développement et la maintenance d'applications."
             %}
 
             <div class="row">
