--- a/solutions.html
+++ b/solutions.html
@@ -21,7 +21,9 @@ title: Information System Designer | Solutions
             {% include block_heading.html
                 title="Un atelier partagé"                
                 sub_title=""
-                desc="Dans le processus de développement d’une application, Information System Designer s’adresse principalement aux analystes métier et aux concepteurs applicatifs (front-end et back-end). Elle leur permet de spécifier ensemble l’application à développer."
+                desc="Dans le processus de développement d’une application, Information System Designer s’adresse<br>
+                    aux analystes métier et aux concepteurs applicatifs (front-end et back-end).<br>
+                    Elle leur permet de spécifier ensemble l’application à développer."
             %}
 
             <div class="row">
@@ -69,7 +71,8 @@ title: Information System Designer | Solutions
             {% include block_heading.html
                 title="Autres activités IT"                
                 sub_title=""
-                desc="L'approche visuelle de Information System Designer facilite la collaboration avec les autres activités impliquées dans le développement et la maintenance d'applications."
+                desc="L'approche visuelle et formelle de Information System Designer facilite la collaboration<br>
+                    avec les autres activités impliquées dans le développement et la maintenance d'applications."
             %}
 
             <div class="row">
@@ -78,35 +81,21 @@ title: Information System Designer | Solutions
                     icon_name="fas fa-cubes"
                     icon_color="txt_indigo"
                     title="Architecte applicatif" 
-                    desc="<ul class='list-unstyled'>
-    <li><i class='fa fa-check' aria-hidden='true'></i> Formaliser les exigences et les besoins métiers</li>
-    <li><i class='fa fa-check' aria-hidden='true'></i> Spécifier les cas d’utilisation</li>
-    <li><i class='fa fa-check' aria-hidden='true'></i> Identifier les entités métier</li>
-    <li><i class='fa fa-check' aria-hidden='true'></i> Maquetter les IHM.</li>
-</ul>"
+                    desc="Vérifier comment l'application implémente les principes d'architecture définis en amont."
                 %}
                 {% include block_cols.html
                     col="4"
                     icon_name="fas fa-code"
                     icon_color="txt_indigo"
                     title="Développeur" 
-                    desc="<ul class='list-unstyled'>
-    <li><i class='fa fa-check' aria-hidden='true'></i> Identifier les états d'une application</li>
-    <li><i class='fa fa-check' aria-hidden='true'></i> Spécifier l'enchaînement des écrans</li>
-    <li><i class='fa fa-check' aria-hidden='true'></i> Concevoir la structure des IHM</li>
-    <li><i class='fa fa-check' aria-hidden='true'></i> Définir les données manipulées par les écrans</li>
-</ul>"
+                    desc="Disposer d'une spécification claire et précise des composants applicatifs à développer."
                 %}
                 {% include block_cols.html
                     col="4"
                     icon_name="fas fa-sitemap"
                     icon_color="txt_indigo"
                     title="Ops" 
-                    desc="<ul class='list-unstyled'>
-    <li><i class='fa fa-check' aria-hidden='true'></i> Définir les services applicatifs</li>
-    <li><i class='fa fa-check' aria-hidden='true'></i> Spécifier les objets métier</li>
-    <li><i class='fa fa-check' aria-hidden='true'></i> Concevoir la base de données</li>
-</ul>"
+                    desc="Comprendre les différents composants applicatifs à déployer et à administrer."
                 %}
             </div>
     </div>
