--- a/solutions.html
+++ b/solutions.html
@@ -8,7 +8,8 @@ title: Information System Designer | Solutions
             {% include block_heading.html
                 title="Analyse et Conception d’applications"                
                 sub_title=""
-                desc="Identifier les besoins des utilisateurs et concevoir la solution"
+                desc="Information System Designer permet de faire collaborer différents acteurs<br>
+                    pour mieux identifier les besoins des utilisateurs et concevoir la solution"
             %}
     </div>
 </section>
