--- a/solutions.html
+++ b/solutions.html
@@ -32,7 +32,7 @@ title: Information System Designer | Solutions
                     col="4"
                     icon_name="fas fa-users"
                     icon_color="txt_indigo"
-                    title="Analyste métier" 
+                    title="Analystes métier" 
                     desc="<ul class='list-unstyled'>
     <li><i class='fa fa-check' aria-hidden='true'></i> Formaliser les exigences et les besoins métiers</li>
     <li><i class='fa fa-check' aria-hidden='true'></i> Spécifier les cas d’utilisation</li>
@@ -44,7 +44,7 @@ title: Information System Designer | Solutions
                     col="4"
                     icon_name="fas fa-desktop"
                     icon_color="txt_indigo"
-                    title="Concepteur Front-End" 
+                    title="Concepteurs Front-End" 
                     desc="<ul class='list-unstyled'>
     <li><i class='fa fa-check' aria-hidden='true'></i> Identifier les états d'une application</li>
     <li><i class='fa fa-check' aria-hidden='true'></i> Spécifier l'enchaînement des écrans</li>
@@ -56,7 +56,7 @@ title: Information System Designer | Solutions
                     col="4"
                     icon_name="fas fa-server"
                     icon_color="txt_indigo"
-                    title="Concepteur Back-End" 
+                    title="Concepteurs Back-End" 
                     desc="              <ul class='list-unstyled'>
     <li><i class='fa fa-check' aria-hidden='true'></i> Définir les services applicatifs</li>
     <li><i class='fa fa-check' aria-hidden='true'></i> Spécifier les objets métier</li>
@@ -81,14 +81,14 @@ title: Information System Designer | Solutions
                     col="4"
                     icon_name="fas fa-cubes"
                     icon_color="txt_indigo"
-                    title="Architecte applicatif" 
+                    title="Architectes applicatifs" 
                     desc="Vérifier comment l'application implémente les principes d'architecture définis en amont."
                 %}
                 {% include block_cols.html
                     col="4"
                     icon_name="fas fa-code"
                     icon_color="txt_indigo"
-                    title="Développeur" 
+                    title="Développeurs" 
                     desc="Disposer d'une spécification claire et précise des composants applicatifs à développer."
                 %}
                 {% include block_cols.html
