--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@ title: Information System Designer | Accueil
                     icon_name="fas fa-users"
                     icon_color="txt_indigo"
                     title="Analyste métier" 
-                    desc="Capturer les besoins et dialoguer avec les concepteurs et développeurs"
+                    desc="Capturer les besoins et dialoguer<br>avec les concepteurs et développeurs"
                 %}
                 {% include block_cols.html
                     col="4"
                     icon_name="fas fa-desktop"
                     icon_color="txt_indigo"
                     title="Concepteur Front-End" 
-                    desc="Concevoir les interfaces utilisateurs et les interactions avec le back-end"
+                    desc="Concevoir les interfaces utilisateurs<br>et les interactions avec le back-end"
                 %}
                 {% include block_cols.html
                     col="4"
                     icon_name="fas fa-server"
                     icon_color="txt_indigo"
                     title="Concepteur Back-End" 
-                    desc="Définir les services applicatifs, les objets métiers et la base de données"
+                    desc="Définir les services applicatifs,<br>les objets métiers et la base de données"
                 %}
             </div>
     </div>
