--- a/solutions.html
+++ b/solutions.html
@@ -70,7 +70,7 @@ title: Information System Designer | Solutions
 <section class="text-center">
     <div class="container">
             {% include block_heading.html
-                title="Autres activités IT"                
+                title="Liens avec d'autres activités IT"                
                 sub_title=""
                 desc="L'approche visuelle et formelle de Information System Designer facilite la collaboration<br>
                     avec les autres activités impliquées dans le développement et la maintenance d'applications."
