--- a/solutions.html
+++ b/solutions.html
@@ -82,21 +82,21 @@ title: Information System Designer | Solutions
                     icon_name="fas fa-cubes"
                     icon_color="txt_indigo"
                     title="Architectes applicatifs" 
-                    desc="Vérifier comment l'application implémente les principes d'architecture définis en amont."
+                    desc="Vérifier comment l'application implémente<br>les principes d'architecture définis en amont."
                 %}
                 {% include block_cols.html
                     col="4"
                     icon_name="fas fa-code"
                     icon_color="txt_indigo"
                     title="Développeurs" 
-                    desc="Disposer d'une spécification claire et précise des composants applicatifs à développer."
+                    desc="Disposer d'une spécification claire et précise<br>des composants applicatifs à développer."
                 %}
                 {% include block_cols.html
                     col="4"
                     icon_name="fas fa-sitemap"
                     icon_color="txt_indigo"
                     title="Ops" 
-                    desc="Comprendre les différents composants applicatifs à déployer et à administrer."
+                    desc="Comprendre les différents composants applicatifs<br>à déployer et à administrer."
                 %}
             </div>
     </div>
