--- a/solutions.html
+++ b/solutions.html
@@ -68,6 +68,12 @@ title: Information System Designer | Solutions
 </section>
 
 <section class="text-center">
+<p><i>"Sur un projet de 6500 j/h avec une vingtaine d'analystes et de développeurs, Information System Designer nous a permis de limiter les risques d'erreur en validant beaucoup plus en en amont les spécifications de l'application.
+Et grâce à ces spécifications détaillées, nous avons pu produire automatiquement jusqu'à 80% du code, avec un résultat beaucoup mieux structuré, plus propre et entièrement normalisé."</i></p>
+<p>Didier Feret, Architecte au Ministère des Armées</p>
+</section>
+
+<section class="bg_lightest_grey text-center">
     <div class="container">
             {% include block_heading.html
                 title="Liens avec d'autres activités IT"                
