--- a/solutions.html
+++ b/solutions.html
@@ -68,8 +68,13 @@ title: Information System Designer | Solutions
 </section>
 
 <section class="text-center">
-<p><i>"Sur un projet de 6500 j/h avec une vingtaine d'analystes et de développeurs, Information System Designer nous a permis de limiter les risques d'erreur en validant beaucoup plus en en amont les spécifications de l'application.
-Et grâce à ces spécifications détaillées, nous avons pu produire automatiquement jusqu'à 80% du code, avec un résultat beaucoup mieux structuré, plus propre et entièrement normalisé."</i></p>
+<p><i>"Sur un projet de 6500 j/h avec une vingtaine d'analystes et de développeurs,<br>
+    Information System Designer nous a permis de <b>limiter les risques d'erreur</b><br>
+    en validant beaucoup plus en en amont les spécifications de l'application.<br>
+    Et grâce à ces spécifications détaillées, nous avons pu produire automatiquement<br>
+    jusqu'à 80% du code, avec un résultat <b>beaucoup mieux structuré</b>,<br>
+    <b>plus propre</b> et <b>entièrement normalisé</b>."</i></p>
+    <br>
 <p>Didier Feret, Architecte au Ministère des Armées</p>
 </section>
 
