--- a/solutions.html
+++ b/solutions.html
@@ -75,7 +75,7 @@ title: Information System Designer | Solutions
     jusqu'à 80% du code, avec un résultat <b>beaucoup mieux structuré</b>,<br>
     <b>plus propre</b> et <b>entièrement normalisé</b>."</i></p>
     <br>
-<p>Didier Feret, Architecte au Ministère des Armées</p>
+<h2>Didier Feret, Architecte au Ministère des Armées</h2>
 </section>
 
 <section class="bg_lightest_grey text-center">
