--- a/solutions.html
+++ b/solutions.html
@@ -74,12 +74,12 @@ title: Information System Designer | Solutions
                    <img width='200' src='images/illustrations/didier-feret.jpg'>
                 </div>
                <div class="col-md-8 col-xs-12 wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 500ms; animation-delay: 300ms; animation-name: fadeInLeft;">
-                   <p><i>"Sur un projet de 6500 j/h avec une vingtaine d'analystes et de développeurs,<br>
+                   <p><font size="+1"><i>"Sur un projet de 6500 j/h avec une vingtaine d'analystes et de développeurs,<br>
     Information System Designer nous a permis de <b>limiter les risques d'erreur</b><br>
     en validant beaucoup plus en en amont les spécifications de l'application.<br>
     Et grâce à ces spécifications détaillées, nous avons pu produire automatiquement<br>
     jusqu'à 80% du code, avec un résultat <b>beaucoup mieux structuré</b>,<br>
-    <b>plus propre</b> et <b>entièrement normalisé</b>."</i></p>
+                       <b>plus propre</b> et <b>entièrement normalisé</b>."</i></font></p>
     <br>
 <h2>Didier Feret, Architecte au Ministère des Armées</h2>
 
