--- a/solutions.html
+++ b/solutions.html
@@ -71,7 +71,7 @@ title: Information System Designer | Solutions
     <div class="container">
             <div class="row">
                <div class="col-md-4 col-xs-12 wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 500ms; animation-delay: 300ms; animation-name: fadeInLeft;">
-                   <img width='250' src='images/illustrations/didier-feret.png' style="float:right">
+                   <img width='200' src='images/illustrations/didier-feret.png' style="float:right;padding:0">
                 </div>
                <div class="col-md-8 col-xs-12 wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 500ms; animation-delay: 300ms; animation-name: fadeInLeft;">
                    <p><font size="+1"><i>"Sur un projet de 6500 j/h avec une vingtaine d'analystes et de développeurs,<br>
