--- a/generateurs.html
+++ b/generateurs.html
@@ -11,3 +11,4 @@ title: Information System Designer | Générateurs
                 desc="Implémenter automatiquement les bonnes pratiques de codage<br>et éviter les tâches répétitives et sources d'erreurs."
             %}
     </div>
+</section>
