--- a/generateurs.html
+++ b/generateurs.html
@@ -12,3 +12,30 @@ title: Information System Designer | Générateurs
             %}
     </div>
 </section>
+
+<section class="bg_lightest_grey">
+    <div class="container">
+        {% include block_text_image.html
+            txt_order="order-1"
+            title="Générez votre propre code"                
+            desc="<p>Grâce à la technologie open-source <a href='https://www.eclipse.org/acceleo/'>Acceleo</a>, il est possible de paramétrer entièrement la génération de code à partir de vos modèles.</p>
+            <p>Basé sur un principe de template, Acceleo permet d'exploiter n'importe qu'elle partie du modèle pour générer automatiquement du code : 
+                <ul>
+                    <li>dans tout type de langage (Java, PHP, XML, HTML, etc…),</li>
+                    <li>en intégrant les frameworks de votre choix,</li>
+                    <li>basé sur vos bonnes pratiques de codage,</li>
+                    <li>tout en conservant le code ajouté manuellement (entre les balises prévues à cet effet).</li>
+                </ul>
+            </p>"
+        
+            lnk_txt=""
+            lnk_href=""
+            lnk_target=""
+            lnk_icon=""
+
+            img_order="order-2"
+            img_src="images/screenshots/generateurs/template.png"
+            img_title="Template de génération Acceleo"
+        %}
+    </div>
+</section>
