--- a/generateurs.html
+++ b/generateurs.html
@@ -17,9 +17,9 @@ title: Information System Designer | Générateurs
     <div class="container">
         {% include block_text_image.html
             txt_order="order-1"
-            title="Générez votre propre code"                
+            title="Générez vos propres fichiers"                
             desc="<p>Grâce à la technologie open-source <a href='https://www.eclipse.org/acceleo/'>Acceleo</a>, il est possible de paramétrer entièrement la génération de code à partir de vos modèles.</p>
-            <p>Basé sur un principe de template, Acceleo permet d'exploiter n'importe qu'elle partie du modèle pour générer automatiquement du code : 
+            <p>Basé sur un principe de template, Acceleo permet d'exploiter n'importe qu'elle partie du modèle pour générer automatiquement tout type de fichier : 
                 <ul>
                     <li>dans tout type de langage (Java, PHP, XML, HTML, etc…),</li>
                     <li>en intégrant les frameworks de votre choix,</li>
