--- a/generateurs.html
+++ b/generateurs.html
@@ -39,3 +39,30 @@ title: Information System Designer | Générateurs
         %}
     </div>
 </section>
+
+<section class="bg_lightest_grey">
+    <div class="container">
+        {% include block_text_image.html
+            txt_order="order-2"
+            title="Réutilisez le générateur PACMAN"                
+        desc="<p>Le <a href="https://github.com/spi4j/pacman">générateur PACMAN</a> est un projet open-source (licence Apache ASL v2) du Ministère des Armées de la France.</p>
+                <p>Il permet de générer jusqu'à 80% du code d'une application s'appuyant sur <a href="https://github.com/spi4j/spi4j">SPI4J</a>, 
+                    un framework qui fournit une API simple pour les applications JavaEE (d'où son nom : Simple Programming Interface for JavaEE):</p>
+                <ul>
+                    <li>Architecture SOA basée sur des services métiers, séparés des objets métiers (DTOs et Entities) portant l'état des données</li>
+                    <li>Architecture en couches (business, matching, persistence, ui) et N-tiers physiques (client, serveur d'applications, base de données relationnelle)</li>
+                    <li>API générée volontairement simple, promeut les bonnes pratiques de développement pour les applications de gestion</li>
+        </ul></p>
+    <p><a href="https://github.com/spi4j/pacman">Téléchargement libre du générateur sur GitHub</a></p>"
+        
+            lnk_txt=""
+            lnk_href=""
+            lnk_target=""
+            lnk_icon=""
+
+            img_order="order-1"
+            img_src="images/screenshots/generateurs/template.png"
+            img_title="Template de génération Acceleo"
+        %}
+    </div>
+</section>
