--- a/generateurs.html
+++ b/generateurs.html
@@ -40,7 +40,7 @@ title: Information System Designer | Générateurs
     </div>
 </section>
 
-<section class="bg_lightest_grey">
+<section>
     <div class="container">
         {% include block_text_image.html
             txt_order="order-2"
