Update and rename communaute.html to ressources.html

--- a/ressources.html
+++ b/ressources.html
@@ -38,7 +38,7 @@ title: Information System Designer | Communauté
             txt_order="order-2"
             title="Code Source"                
       desc="<p>Le code source complet de <i>Information System Designer</i> est disponible sur GitHub.</p>
-        <p>Vous pouvez l'utiliser, le modifier, et contribuer de nouvelles versions selon les règles définies par la licence <a href="https://www.eclipse.org/org/documents/epl-v10.php">EPL</a> (Eclipse Public License)."
+        <p>Vous pouvez l'utiliser, le modifier, et contribuer de nouvelles versions selon les règles définies par la licence <a href='https://www.eclipse.org/org/documents/epl-v10.php'>EPL</a> (Eclipse Public License)."
         
             lnk_txt="Code Source"
             lnk_href="https://github.com/ObeoNetwork/InformationSystem"
