--- a/ressources.html
+++ b/ressources.html
@@ -20,7 +20,7 @@ title: Information System Designer | Communauté
             title="Documentation"                
             desc="Chacun des modeleurs proposé par Information System Designer dispose d'un Guide Utilisateur vous permettant de découvrir comment utiliser les différentes fonctionnalités."
         
-            lnk_txt="Documentation"
+            lnk_txt="Documentation&nbsp;"
             lnk_href="https://github.com/ObeoNetwork/InformationSystem/wiki"
             lnk_target=""
             lnk_icon="fas fa-book"
@@ -40,10 +40,10 @@ title: Information System Designer | Communauté
       desc="<p>Le code source complet de <i>Information System Designer</i> est disponible sur GitHub.</p>
         <p>Vous pouvez l'utiliser, le modifier, et contribuer de nouvelles versions selon les règles définies par la licence <a href='https://www.eclipse.org/org/documents/epl-v10.php'>EPL</a> (Eclipse Public License)."
         
-            lnk_txt="Code Source"
+            lnk_txt="Code Source&nbsp;"
             lnk_href="https://github.com/ObeoNetwork/InformationSystem"
             lnk_target=""
-            lnk_icon="fas fa-book"
+            lnk_icon="fas fa-download"
 
             img_order="order-1"
             img_src="images/logos/logo-github.png"
