--- a/ressources.html
+++ b/ressources.html
@@ -18,7 +18,7 @@ title: Information System Designer | Communauté
         {% include block_text_image.html
             txt_order="order-1"
             title="Documentation"                
-            desc="Chacun des modeleurs proposé par Information System Designer dispose d'un Guide Utilisateur vous permettant de découvrir comment utiliser les différentes fonctionnalités."
+        desc="<p>Les fonctionnalités proposées par <i>Information System Designer</i> sont expliquées dans Guide Utilisateur complet.</p><br>"
         
             lnk_txt="Documentation&nbsp;"
             lnk_href="https://github.com/ObeoNetwork/InformationSystem/wiki"
@@ -38,7 +38,7 @@ title: Information System Designer | Communauté
             txt_order="order-2"
             title="Code Source"                
       desc="<p>Le code source complet de <i>Information System Designer</i> est disponible sur GitHub.</p>
-        <p>Vous pouvez l'utiliser, le modifier, et contribuer de nouvelles versions selon les règles définies par la licence <a href='https://www.eclipse.org/org/documents/epl-v10.php'>EPL</a> (Eclipse Public License)."
+        <p>Vous pouvez l'utiliser, le modifier, et contribuer de nouvelles versions selon les règles définies par la licence <a href='https://www.eclipse.org/org/documents/epl-v10.php'>EPL</a> (Eclipse Public License).</p><br>"
         
             lnk_txt="Code Source&nbsp;"
             lnk_href="https://github.com/ObeoNetwork/InformationSystem"
