--- a/ressources.html
+++ b/ressources.html
@@ -8,12 +8,12 @@ title: Information System Designer | Communauté
             {% include block_heading.html
                 title="Ressources"                
                 sub_title=""
-                desc="Information System Designer est un projet open-source."
+                desc=""
             %}
     </div>
 </section>
 
-<section class="bg_lightest_grey">
+<section >
     <div class="container">
         {% include block_text_image.html
             txt_order="order-1"
@@ -32,7 +32,7 @@ title: Information System Designer | Communauté
     </div>
 </section>
 
-<section>
+<section class="bg_lightest_grey">
     <div class="container">
         {% include block_text_image.html
             txt_order="order-2"
@@ -48,6 +48,33 @@ title: Information System Designer | Communauté
             img_order="order-1"
             img_src="images/logos/logo-github.png"
             img_title="Github"
+        %}
+    </div>
+</section>
+
+<section >
+    <div class="container">
+        {% include block_text_image.html
+            txt_order="order-1"
+            title="Communauté"                
+        desc="<p>Le projet <i>Information System Designer</i> est le fruit d'une collaboration entre <a href='https://www.defense.gouv.fr/'>Le Ministère des Armées</a> en France, et la société <a href='https://www.obeosoft.com/fr/'>Obeo</a></p>
+        <p>Il est référencé dans le <a href='https://sill.etalab.gouv.fr/fr/software?id=62'>Socle Interministériel de Logiciels Libres</a>, le catalogue de références pour les administrations, géré par la DiNum (Direction interministérielle du numérique).</p>
+        <p>Pour être accompagné sur l'utilisation, le paramétrage ou l'extension de <i>Information System Designer</i>, la société Obeo propose des prestations de services :
+            <ul>
+                <li>formation,</li>
+                <li>support,</li>
+                <li>développement spécifique,</li>
+                <li>tierce-maitenance applicative</li>
+            </ul><br>"
+        
+            lnk_txt="Services professionels&nbsp;"
+            lnk_href="https://www.obeosoft.com/fr/services"
+            lnk_target=""
+            lnk_icon="fas fa-user-alt"
+
+            img_order="order-2"
+            img_src="images/illustrations/coaching.png"
+            img_title="Documentation de Information System Designer"
         %}
     </div>
 </section>
