--- a/ressources.html
+++ b/ressources.html
@@ -74,7 +74,7 @@ title: Information System Designer | Communauté
 
             img_order="order-2"
             img_src="images/illustrations/coaching.png"
-            img_title="Documentation de Information System Designer"
+            img_title="Services Obeo"
         %}
     </div>
 </section>
