--- a/ressources.html
+++ b/ressources.html
@@ -18,9 +18,9 @@ title: Information System Designer | Communauté
         {% include block_text_image.html
             txt_order="order-1"
             title="Documentation"                
-        desc="<p>Les fonctionnalités proposées par <i>Information System Designer</i> sont expliquées dans Guide Utilisateur complet.</p><br>"
+        desc="<p>Les fonctionnalités proposées par <i>Information System Designer</i> sont expliquées dans un Guide Utilisateur complet.</p><br>"
         
-            lnk_txt="Documentation&nbsp;"
+            lnk_txt="Guide Utilisateur&nbsp;"
             lnk_href="https://github.com/ObeoNetwork/InformationSystem/wiki"
             lnk_target=""
             lnk_icon="fas fa-book"
@@ -40,7 +40,7 @@ title: Information System Designer | Communauté
       desc="<p>Le code source complet de <i>Information System Designer</i> est disponible sur GitHub.</p>
         <p>Vous pouvez l'utiliser, le modifier, et contribuer de nouvelles versions selon les règles définies par la licence <a href='https://www.eclipse.org/org/documents/epl-v10.php'>EPL</a> (Eclipse Public License).</p><br>"
         
-            lnk_txt="Code Source&nbsp;"
+            lnk_txt="Accès au code source&nbsp;"
             lnk_href="https://github.com/ObeoNetwork/InformationSystem"
             lnk_target=""
             lnk_icon="fas fa-download"
@@ -73,7 +73,7 @@ title: Information System Designer | Communauté
             lnk_icon="fas fa-user-alt"
 
             img_order="order-2"
-            img_src="images/illustrations/coaching.png"
+            img_src="images/illustrations/coaching.jpg"
             img_title="Services Obeo"
         %}
     </div>
