--- a/ressources.html
+++ b/ressources.html
@@ -57,7 +57,8 @@ title: Information System Designer | Communauté
         {% include block_text_image.html
             txt_order="order-1"
             title="Communauté"                
-        desc="<p>Le projet <i>Information System Designer</i> est le fruit d'une collaboration entre <a href='https://www.defense.gouv.fr/'>Le Ministère des Armées</a> en France, et la société <a href='https://www.obeosoft.com/fr/'>Obeo</a></p>
+        desc="<p>Le projet <i>Information System Designer</i> est, à l'origine, le fruit d'une collaboration entre <a href='https://www.defense.gouv.fr/'>Le Ministère des Armées</a> en France, et la société <a href='https://www.obeosoft.com/fr/'>Obeo</a></p>
+        <p>Depuis, le projet bénéficie régulièrement de contributions d'autres organisations utilisatrices afin d'intégrer des évolutions.</p>
         <p>Il est référencé dans le <a href='https://sill.etalab.gouv.fr/fr/software?id=62'>Socle Interministériel de Logiciels Libres</a>, le catalogue de références pour les administrations, géré par la DiNum (Direction interministérielle du numérique).</p>
         <p>Pour être accompagné sur l'utilisation, le paramétrage ou l'extension de <i>Information System Designer</i>, la société Obeo propose des prestations de services :
             <ul>
