--- a/solutions.html
+++ b/solutions.html
@@ -78,7 +78,7 @@ title: Information System Designer | Solutions
     Information System Designer nous a permis de <b>limiter les risques d'erreur</b><br>
     en validant beaucoup plus en en amont les spécifications de l'application.<br>
     Et grâce à ces spécifications détaillées, nous avons pu produire automatiquement<br>
-    jusqu'à 80% du code, avec un résultat <b>beaucoup mieux structuré</b>,<br>
+    jusqu'à 80% du code sur le backend, avec un résultat <b>beaucoup mieux structuré</b>,<br>
                        <b>plus propre</b> et <b>entièrement normalisé</b>."</i></font></p>
     <br>
 <h2>Didier Feret, Architecte au Ministère des Armées</h2>
