--- a/generateurs.html
+++ b/generateurs.html
@@ -61,8 +61,8 @@ title: Information System Designer | Générateurs
             lnk_icon=""
 
             img_order="order-1"
-            img_src=""
-            img_title=""
+            img_src="images/screenshots/generateurs/pacman.png"
+            img_title="Exemple de code généré avec Pacman"
         %}
     </div>
 </section>
