--- a/solutions.html
+++ b/solutions.html
@@ -67,7 +67,7 @@ title: Information System Designer | Solutions
     </div>
 </section>
 
-<section class="text-center">
+<section class="text-center" style="background-color:#261e58; color:white;">
     <div class="container">
             <div class="row">
                <div class="col-md-4 col-xs-12 wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 500ms; animation-delay: 300ms; animation-name: fadeInLeft;">
