--- a/solutions.html
+++ b/solutions.html
@@ -81,7 +81,7 @@ title: Information System Designer | Solutions
     jusqu'à 80% du code sur le backend, avec un résultat <b>beaucoup mieux structuré</b>,<br>
                        <b>plus propre</b> et <b>entièrement normalisé</b>."</i></font></p>
     <br>
-<h2>Didier Feret, Architecte au Ministère des Armées</h2>
+<h2 style="color:white;">Didier Feret, Architecte au Ministère des Armées</h2>
 
                 </div>
               </div>
