--- a/index.html
+++ b/index.html
@@ -143,6 +143,23 @@ title: Information System Designer | Accueil
     </div>
 </section>
 
+<section class="text-center" style="background-color:#261e58; color:white;">
+    <div class="container">
+            <div class="row">
+               <div class="col-md-4 col-xs-12 wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 500ms; animation-delay: 300ms; animation-name: fadeInLeft;">
+                   <img width='200' src='images/illustrations/david-clain.png' style="float:right;padding:0">
+                </div>
+               <div class="col-md-8 col-xs-12 wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 500ms; animation-delay: 300ms; animation-name: fadeInLeft;">
+                   <p><font size="+1"><i>"Nous avons utilisé IS Designer sur trois projets à portée nationale. Le principal bénéfice a été constaté grâce à la génération de la couche d'accès aux données (DAO), en particulier pour les mises à jour des schémas de base.
+Pour la dizaine de développeurs impliqués sur ces projets, la production automatique des Tests Unitaires a également permis non seulement de s'approprier plus facilement le socle technique, grâce à une approche "par l'exemple", mais aussi d’avoir une assurance de non régression sur les fonctionnalités produites.."</i></font></p>
+    <br>
+<h2 style="color:white;">David Clain, Architecte Logiciels au Ministère de l'&Eacute;ducation Nationale</h2>
+
+                </div>
+              </div>
+
+</section>
+    
 <section class="text-center">
     <div class="container">
         {% include block_heading.html
